GR-61365: Serve embedded jrt resources without runtime modules